root/M2/Managed-Production/Workload/m2-ne-prod-hub1-spoke2/northeurope_m2-ne-prod-hub1-spoke2-network-rg/Deployment_vNet.parameters.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vNetDefinition": {
            "value": {
                "vnetName": "m2-ne-prod-hub1-spoke2",
                "vnetAddressPrefix": "10.1.32.0/20",
                "dnsServers": [                    
                    "10.1.2.4"
					
                ],
                "subnetlist": [
                    {
                        "name": "m2-ne-prod-hub1-spoke2-app1",
                        "properties": {
                            "addressPrefix": "10.1.32.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups' ,'m2-ne-prod-hub1-spoke2-app1-nsg')]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables' ,'m2-ne-prod-hub1-spoke2-default-routetable')]"
                            }
                        }
                    },
                    {
                        "name": "m2-ne-prod-hub1-spoke2-app2",
                        "properties": {
                            "addressPrefix": "10.1.33.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups' ,'m2-ne-prod-hub1-spoke2-app2-nsg')]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables' ,'m2-ne-prod-hub1-spoke2-default-routetable')]"
                            }
                        }
                    },
                    {
                        "name": "m2-ne-prod-hub1-spoke2-app3",
                        "properties": {
                            "addressPrefix": "10.1.34.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups' ,'m2-ne-prod-hub1-spoke2-app3-nsg')]"
                            }
                        }
                    }
                ],
                "routeTables": [
                    {
                        "name": "m2-ne-prod-hub1-spoke2-default-routetable",
                        "routes": [
                            {
                                "name": "internet",
                                "addressPrefix": "0.0.0.0/0",
                                "nextHopType": "VirtualAppliance",
                                "nextHopIpAddress": "10.1.1.4"
                            }
                        ]
                    }
                ],
                "networkSecurityGroups": [
                    {
                        "name": "m2-ne-prod-hub1-spoke2-app1-nsg",
                        "securityRules": [
                            {
                                "name": "rdp_rule1",
                                "properties": {
                                    "description": "Allow RDP",
                                    "protocol": "Tcp",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "3389",
                                    "sourceAddressPrefix": "Internet",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 100,
                                    "direction": "Inbound",
                                    "sourceApplicationSecurityGroups": "",
                                    "destinationApplicationSecurityGroups": ""
                                }
                            }
                        ]
                    },
                    {
                        "name": "m2-ne-prod-hub1-spoke2-app2-nsg",
                        "securityRules": [
                            {
                                "name": "rdp_rule1",
                                "properties": {
                                    "description": "Allow RDP",
                                    "protocol": "Tcp",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "3389",
                                    "sourceAddressPrefix": "Internet",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 100,
                                    "direction": "Inbound",
                                    "sourceApplicationSecurityGroups": "",
                                    "destinationApplicationSecurityGroups": ""
                                }
                            }
                        ]
                    },
                    {
                        "name": "m2-ne-prod-hub1-spoke2-app3-nsg",
                        "securityRules": [
                            {
                                "name": "rdp_rule1",
                                "properties": {
                                    "description": "Allow RDP",
                                    "protocol": "Tcp",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "3389",
                                    "sourceAddressPrefix": "Internet",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 100,
                                    "direction": "Inbound",
                                    "sourceApplicationSecurityGroups": "",
                                    "destinationApplicationSecurityGroups": ""
                                }
                            }
                        ]
                    }
                ],
                "connections": [],
                "virtualNetworkPeerings": [
                    {
                        "properties": {
                            "remoteVirtualNetwork": {
                                "id": "/subscriptions/92b1b98d-6d0f-4252-91cf-e7dfdaf43a38/resourceGroups/m2-ne-prod-hub1-network-rg/providers/Microsoft.Network/virtualNetworks/m2-ne-prod-hub1"
                            },
                            "allowVirtualNetworkAccess": "true",
                            "allowForwardedTraffic": "true",
                            "allowGatewayTransit": "false",
                            "useRemoteGateways": "false"
                        }
                    }
                ],
                "azureFirewalls": []
            }
        }
    }
}
